--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,8 @@ out
 .gradle
 gradlew.bat
 settings.gradle
-models.Credentials
-src/main/java/models/Credentials
+models.Credentials.java
+src/main/java/models/Credentials.java
 
 # IntelliJ #
 ############
