[misc] deleted credentials class and re-inserted it into gitignore before re-creation

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,8 @@ out
 .gradle
 gradlew.bat
 settings.gradle
-
+models.Credentials.java
+src/main/java/models/Credentials.java
 
 # IntelliJ #
 ############
